--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <p class="hook-statement">Education is a master key</p>
             <div class="more"><a href="#about" class="cta-button">Learn More</a></div>
         </section>
+        <section class="hero1">
+            <p class="hook-statement1">Education is a master key</p>
+            <div class="more1"><a href="#about" class="cta-button1">Learn More</a></div>
+        </section>
         <section class="about" id="about">
             <h2>About Us</h2>
             <div class="commitment">
@@ -115,7 +119,7 @@
                 <img src="testimonial3.jpg" alt="Parent Testimonial">
                 <p>"A wonderful community and a great curriculum." - Parent</p>
             </div>
-            <div class="more"><a href="testimonials.html" class="testimony-button">More Testimonials</a></div>
+            <div class="more-testimony"><a href="testimonials.html" class="testimony-button">More Testimonials</a></div>
         </section>
         <section id="faculty" class="faculty">
             <h2>Our Faculty</h2>
@@ -147,7 +151,7 @@
                 <img src="event3.jpg" alt="Event 3">
                 <p>Sports Day - May 2024</p>
             </div>
-            <div class="more"><a href="events.html" class="events-button">View All Events</a></div>
+            <div class="more-events"><a href="events.html" class="events-button">View All Events</a></div>
         </section>
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
@@ -172,7 +176,7 @@
         </div>
         <div class="footer-section">
             <h3>Support Us</h3>
-            <p>Your support helps us provide the best education for our students. <a href="donate.html">Donate Now</a></p>
+            <p>Your support helps us provide the best education for our students. <a class="donate" href="donate.html">Donate Now</a></p>
         </div>
         <div class="footer-section">
             <h3>Downloads</h3>
